# filepattern-1

./: .gitattributes  .gitignore  .readthedocs.yml  CMakeLists.txt  MANIFEST.in  README.md  build-wheels-mac.sh  environment.yml  filepattern_test.py  install_win_filepattern2.bat  pom.xml  settings.xml  setup.cfg  setup.py  test  test.cpp  test.py
.github/workflows/: build_and_test_java_ubuntu.yml  build_and_test_mac.yml  build_and_test_ubuntu.yml  build_and_test_windows.yml  build_wheels.yml  publish_maven.yml  publish_pypi  publish_pypi.yml
benchmarks/: benchmark.py  tests.py
ci-utils/: install_prereq_linux.sh  install_prereq_win.bat
ci-utils/envs/: conda_cpp.txt
docs/: Doxyfile  cpp.html  requirements.txt
docs/source/: Backend.rst  CMakeLists.txt  Examples.rst  First.rst  Home.rst  Reference.rst  conf.py  index.rst  pattern-0.1.1-cp37-cp37m-linux_x86_64.whl  setup.py
examples/: external_filepattern.py  filepattern.py  recursive_filepattern.py  stringpattern.py  tests.py
fixed_wheels/: filepattern2-0.1.1-cp310-cp310-macosx_11_0_x86_64.whl  filepattern2-0.1.1-cp36-cp36m-macosx_11_0_x86_64.whl  filepattern2-0.1.1-cp37-cp37m-macosx_11_0_x86_64.whl  filepattern2-0.1.1-cp38-cp38-macosx_11_0_x86_64.whl  filepattern2-0.1.1-cp39-cp39-macosx_11_0_x86_64.whl
incorrect_new_wheels/: filepattern2-0.1.1-cp310-cp310-macosx_11_0_x86_64.whl  filepattern2-0.1.1-cp36-cp36m-macosx_11_0_x86_64.whl  filepattern2-0.1.1-cp39-cp39-macosx_11_0_x86_64.whl
new_wheels/: filepattern2-0.1.1-cp37-cp37m-macosx_11_0_x86_64.whl  filepattern2-0.1.1-cp38-cp38-macosx_11_0_x86_64.whl
old/: filepattern2-0.1.1-cp310-cp310-macosx_11_0_universal2.whl
tests/: old_test_filepattern.py  test_filepattern.py  test_filepattern_data.py  test_generate_filepattern_data.py  test_infer_pattern.py  test_inferpattern.py  tests.py  vector_pattern.py
working_wheels/: filepattern2-0.1.1-cp36-cp36m-macosx_11_0_x86_64.whl
(+87 files in other folders)
